--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="mount"></div>
-    <script src="../assets/main.js"></script>
+    <script src="./assets/main.js"></script>
 </body>
 </html>
